Update to latest working version 5/7 5:02p

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -22,3 +22,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Secret files
+.env
+credentials.json
+
+# Node.js dependencies
+node_modules/
+
+# TypeScript compilation output
+dist/
+
