--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,28 @@
   "builds": [
     {
       "src": "client/package.json",
-      "use": "@vercel/static-build"
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "client/dist"
+      }
+    },
+    {
+      "src": "client/api/index.ts",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": "client/credentials.json"
+      }
     }
-  ]
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/client/api/index.ts"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/client/dist/$1"
+    }
+  ],
+  "outputDirectory": "client/dist"
 }
