--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,30 @@
 {
   "version": 2,
+  "installCommand": "npm install --prefix client && npm install --prefix api",
   "builds": [
     {
       "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "buildCommand": "npm install && npm run build",
-        "outputDirectory": "dist"
-      }
+      "use": "@vercel/static-build"
     },
     {
-      "src": "client/api/index.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": "client/credentials.json"
-      }
+      "src": "api/index.ts",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/client/api/index.ts"
+      "dest": "/api/index.ts"
     },
     {
       "src": "/(.*)",
       "dest": "/client/dist/$1"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api"
     }
   ]
 }
